--- a/css/globals/utilities.css
+++ b/css/globals/utilities.css
@@ -11,7 +11,6 @@
 }
 
 .row {
-/*   width: 100%; */
     display: flex;
 }
 
@@ -27,7 +26,6 @@
 .content-box {
     display: flex;
     gap: 5rem;
- 
 } 
 
 .width-100 {
@@ -70,4 +68,16 @@
 
 .centered-text {
     text-align: center;
+}
+
+
+/* Media Queries */
+@media (max-width: 768px) {
+
+.content-box {
+    padding: 0rem 1rem;
+}
+
+
+
 }
